# latex-ocr-server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  example_client.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/latex_ocr_server/: __main__.py  parse_args.py  server.py
src/latex_ocr_server/protos/: latex_ocr.proto  latex_ocr_pb2.py  latex_ocr_pb2.pyi  latex_ocr_pb2_grpc.py
